# Robolab

./: README.md
CommonSource/: CMakeLists.txt  Macros.h
Demonstrations/: CMakeLists.txt
NaoLeague/: CMakeLists.txt  qiproject.xml  readmeWindows.txt.txt  runqibuild.bat  soul.cpp
NaoLeague/GameController/: CMakeLists.txt  main.cpp  qiproject.xml
NaoLeague/MotionSkeleton/: .main.cpp.swp  CMakeLists.txt  main.cpp  qiproject.xml
NaoLeague/Motions/: CMakeLists.txt  Motions.cpp  Motions.h  qiproject.xml
NaoLeague/Motions/Motions/: backToStand0.json  backToStand1.json  backToStand2.json  backToStand3.json  backToStand4.json  backToStand5.json  backToStand6.json  backToStand7.json  bellyToStand0.json  getupFromBack1.json  getupFromBack2.json
NaoLeague/Vision/: CMakeLists.txt  imageGrabber.cpp  imageGrabber.h  imageGrabberTest.cpp  saveImageOnClick.cpp
SearchandRescue/: CMakeLists.txt
WorkLeague/: CMakeLists.txt
